src/test/ui/span/method-and-field-eager-resolution.stderr
error[E0282]: type annotations needed
  --> $DIR/method-and-field-eager-resolution.rs:5:5
   |
LL |     x.0;
   |     ^ cannot infer type
   |
   = note: type must be known at this point
help: consider giving this binding a type
   |
LL |     let mut x: Type = Default::default();
   |              ^^^^^^

error[E0282]: type annotations needed
  --> $DIR/method-and-field-eager-resolution.rs:12:5
   |
LL |     x[0];
   |     ^ cannot infer type
   |
   = note: type must be known at this point
help: consider giving this binding a type
   |
LL |     let mut x: Type = Default::default();
   |              ^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
